force-app/main/default/objects/MDMRegRequestContact__c/MDMRegRequestContact__c.object-meta.xml
<CustomObject>
    <label>MDM 고객 등록 요청 담당자 정보</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000000}</displayFormat>
        <label>MDMRegRequestCustomerContact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>