force-app/main/default/objects/MDMRegRequestContact__c/fields/MDMRegRequestCustomer__c.field-meta.xml
<CustomField>
    <fullName>MDMRegRequestCustomer__c</fullName>
    <label>MDMRegRequestCustomer</label>
    <referenceTo>MDMRegRequestCustomer__c</referenceTo>
    <relationshipLabel>MDMRegRequestContact</relationshipLabel>
    <relationshipName>MDMRegRequestContact</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>