force-app/main/default/objects/MDMRegRequestContact__c/fields/PV_EMAIL_VK__c.field-meta.xml
<CustomField>
    <fullName>PV_EMAIL_VK__c</fullName>
    <label>PV_EMAIL_VK</label>
    <type>Email</type>
</CustomField>