force-app/main/default/objects/MDMRegRequestContact__c/fields/PV_KNVKGB_lu__c.field-meta.xml
<CustomField>
    <fullName>PV_KNVKGB_lu__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>담당자유형
GroupId : KNVKGB</description>
    <label>PV_KNVKGB_lu</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MDMReferenceCode__c.GROUPID__c</field>
            <operation>equals</operation>
            <value>KNVKGB</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>MDMReferenceCode__c</referenceTo>
    <relationshipLabel>MDMRegRequestContact</relationshipLabel>
    <relationshipName>MDMRegRequestContact_PV_KNVKGB</relationshipName>
    <type>Lookup</type>
</CustomField>