force-app/main/default/objects/MDMRegRequestContact__c/fields/PV_NAME1_VK__c.field-meta.xml
<CustomField>
    <fullName>PV_NAME1_VK__c</fullName>
    <label>PV_NAME1_VK</label>
    <length>50</length>
    <type>Text</type>
</CustomField>