force-app/main/default/objects/MDMRegRequestContact__c/fields/PV_PAFKT_VK__c.field-meta.xml
<CustomField>
    <fullName>PV_PAFKT_VK__c</fullName>
    <label>PV_PAFKT_VK</label>
    <length>50</length>
    <type>Text</type>
</CustomField>