force-app/main/default/objects/MDMRegRequestContact__c/fields/PV_TALKT_VK__c.field-meta.xml
<CustomField>
    <fullName>PV_TALKT_VK__c</fullName>
    <label>PV_TALKT_VK</label>
    <length>100</length>
    <type>Text</type>
</CustomField>