force-app/main/default/objects/MDMRegRequestContact__c/fields/PV_TELF1_VK__c.field-meta.xml
<CustomField>
    <fullName>PV_TELF1_VK__c</fullName>
    <label>PV_TELF1_VK</label>
    <type>Phone</type>
</CustomField>